--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,9 +33,9 @@ springfox:
       v2:
         path: /swagger
 
-#TODO: remove inventory service url config
-dmall:
-  inventory:
-    url: http://localhost:9081
 
 #TODO: add eureka configs
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8090/eureka/
