--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,9 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:8080/eureka/
+      defaultZone: http://eureka-server:8090/eureka/
 
 #TODO: add zipkin configs for dev env
+spring:
+  zipkin:
+    base-url: http://zipkin-service:9411/zipkin/
