--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,9 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8080/eureka/
+      defaultZone: http://localhost:8090/eureka/
 
 #TODO: enable feign hystrix
+feign:
+  hystrix:
+    enabled: true
