--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,10 +5,17 @@ spring:
   application:
     name: order-service
   #TODO: add configs for config server
+  cloud:
+      config:
+        discovery:
+          service-id: config-server
+          enabled: true
+        enabled: true
+        fail-fast: true
 
 eureka:
   instance:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8080/eureka/
+      defaultZone: http://localhost:8090/eureka/
